##Text encoding: utf-8

2012-07-14  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/view.cc: fixed BuildSVG() and BuildEPS() which were missing
	the trailing 0.

2012-06-28  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: add -Werror=format-security to CFLAGS.
	* docs/reference/Makefile.am: add missing files.

2012-06-27  Daniel Leidert  <daniel.leidert@wgdd.de>
	* libs/gcp/stringdlg.cc: Fixed errors by -Werror=format-security.
	* libs/gcp/window.cc: Ditto.
	* libs/gcp/application.cc: Ditto.
	* libs/gcu/dialog.cc: Ditto.
	* programs/3d/application.cc: Ditto.
	* programs/table/gchemtable-app.cc: Ditto.
	* programs/spectra/application.cc: Ditto.
	* programs/calc/gchemcalc.cc: Ditto.
	* plugins/paint/residues/residues-dlg.cc: Ditto.
	* plugins/paint/selection/selectiontool.cc: Ditto.
	* plugins/paint/templates/templatetool.cc: Ditto.

2012-06-27  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post release version bump (0.12.13).

2012-06-26  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: updated version (0.12.12).

2012-06-25  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/crystaldoc.cc: fixed atoms loading and an infinite loop
	condition. [#36583]

2012-02-26  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/mechanism-step.cc: don't crash when selecting an alignment item.
	[#35626]
	* libs/gcp/reaction.cc: fixed an arrow-step missing link.

2011-11-30  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/text.cc: fixed rise position serialization. [#34947]

2011-11-12  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post release version bump (0.12.11).

2011-11-11  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: really fix mozilla plugin build.
	* mozilla-plugin/moz-plugin.c: ditto.

2011-11-09  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/crystalatom.cc: serialize radius effective ratio.
	* libs/gcu/crystaldoc.cc: don't crash when an atom can't be loaded.