@@ -1,5 +1,8 @@
 ##Text encoding: utf-8
 
+2012-08-06  Jean Bréfort  <jean.brefort@normalesup.org>
+	* libs/gcu/object.cc: fix loading. [#37032]
+
 2012-07-14  Jean Bréfort  <jean.brefort@normalesup.org>
 	* libs/gcp/view.cc: fixed BuildSVG() and BuildEPS() which were missing
 	the trailing 0.
